--- a/roster.html
+++ b/roster.html
@@ -20,6 +20,7 @@
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td> NE</td><td>Josh Gordon            </td></tr>
 <tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
+<tr><td>BUF</td><td>Duke Williams          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -29,7 +30,6 @@
 <tr><td>DET</td><td>TJ Hockenson           </td></tr>
 <tr><td>BAL</td><td>Miles Boykin           </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
-<tr><td>OAK</td><td>Hunter Renfrow         </td></tr>
 </table>
 </td>
 <td valign=top>
