--- a/week6.html
+++ b/week6.html
@@ -67,10 +67,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (3)</b></font></td></tr>
 <tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
+<tr><td>KJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>DWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Fitzgerald</td>    <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gallup</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Ertz</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Murray</td>        <td></td><td align=right>0</td></tr>
