--- a/week7.html
+++ b/week7.html
@@ -129,7 +129,7 @@
 <tr><td>White</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Shepard</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Jeffery</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Slayton</td>       <td></td><td align=right>0</td></tr>
