--- a/freeagt.html
+++ b/freeagt.html
@@ -1,119 +1,119 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 8)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 9)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3> 840</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Case Keenum            </td><td><font size=3> 680</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Mason Rudolph          </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Case Keenum            </td><td><font size=3> 680</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 580</td></tr>
 <tr><td><font size=3>4)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 565</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 555</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 540</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Kyle Allen             </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Matt Moore             </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 540</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 455</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Matt Moore             </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Mitch Trubisky         </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>11)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 205</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Matt Schaub            </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Chase Daniel           </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Eli Manning            </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Josh Rosen             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Brandon Allen          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Matt Schaub            </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Chase Daniel           </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Eli Manning            </td><td><font size=3> 135</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>Raheem Mostert         </td><td><font size=3> 440</td></tr>
-<tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>Duke Johnson           </td><td><font size=3> 305</td></tr>
 <tr><td><font size=3>Frank Gore             </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Kerryon Johnson        </td><td><font size=3> 260</td></tr>
 <tr><td><font size=3>Reggie Bonnafon        </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Duke Johnson           </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Adrian Peterson        </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Brandon Bolden         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Adrian Peterson        </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>Gus Edwards            </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Brian Hill             </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Kalen Ballage          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>CJ Prosise             </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Chris Thompson         </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Tarik Cohen            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Dare Ogunbowale        </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>Tyrell Williams        </td><td><font size=3> 495</td></tr>
-<tr><td><font size=3>Marvin Jones           </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>Zach Pascal            </td><td><font size=3> 420</td></tr>
 <tr><td><font size=3>Chris Conley           </td><td><font size=3> 400</td></tr>
 <tr><td><font size=3>John Ross              </td><td><font size=3> 360</td></tr>
 <tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>Zach Pascal            </td><td><font size=3> 310</td></tr>
+<tr><td><font size=3>Taylor Gabriel         </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Cole Beasley           </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Willie Snead           </td><td><font size=3> 280</td></tr>
 <tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 275</td></tr>
 <tr><td><font size=3>Danny Amendola         </td><td><font size=3> 270</td></tr>
 <tr><td><font size=3>Corey Davis            </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>Taylor Gabriel         </td><td><font size=3> 260</td></tr>
 <tr><td><font size=3>Golden Tate            </td><td><font size=3> 255</td></tr>
 <tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3> 225</td></tr>
 <tr><td><font size=3>Auden Tate             </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>Kenny Stills           </td><td><font size=3> 215</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Darren Fells           </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Will Dissly            </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Ryan Griffin           </td><td><font size=3> 235</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Will Dissly            </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Ryan Griffin           </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jordan Akins           </td><td><font size=3> 235</td></tr>
 <tr><td><font size=3>5)</td><td><font size=3>Dallas Goedert         </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>6)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 215</td></tr>
 <tr><td><font size=3>7)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>James O'Shaughnessy    </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Jason Witten           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 140</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Vance McDonald         </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Vance McDonald         </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jason Witten           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>James O'Shaughnessy    </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jack Doyle             </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Cameron Brate          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 140</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 550</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 505</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3> 480</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 475</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 700</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 645</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3> 610</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3> 580</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 575</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 500</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 480</td></tr>
 <tr><td><font size=3>Matt Bryant            </td><td><font size=3> 435</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 380</td></tr>
 <tr><td><font size=3>Randy Bullock          </td><td><font size=3> 365</td></tr>
 <tr><td><font size=3>Ty Long                </td><td><font size=3> 345</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 300</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 340</td></tr>
 <tr><td><font size=3>Stephen Gostkowski     </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 245</td></tr>
 <tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 240</td></tr>
-<tr><td><font size=3>Jason Sanders          </td><td><font size=3> 210</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
+<tr><td><font size=3>Noah Fant              </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Deebo Samuel           </td><td><font size=3> 245</td></tr>
 <tr><td><font size=3>Steven Sims            </td><td><font size=3> 230</td></tr>
 <tr><td><font size=3>Deonte Harris          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>Foster Moreau          </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>Noah Fant              </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Parris Campbell        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Foster Moreau          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Andy Isabella          </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>Parris Campbell        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Bisi Johnson           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>KeeSean Johnson        </td><td><font size=3>  80</td></tr>
 <tr><td><font size=3>Irv Smith              </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Bisi Johnson           </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Benny Snell            </td><td><font size=3>  35</td></tr>
 <tr><td><font size=3>Keelan Doss            </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>KeeSean Johnson        </td><td><font size=3>   5</td></tr>
 <tr><td><font size=3>N'Keal Harry           </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Andy Isabella          </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Tommy Sweeney          </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Darwin Thompson        </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
