--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -68,43 +69,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>6890</font></td>
-    <td><font size=2>6935</font></td>
-    <td><font size=2>1065</font></td>
-    <td><font size=2>305</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6835</font></td>
-    <td><font size=2>6380</font></td>
+    <td><font size=2>7810</font></td>
+    <td><font size=2>6840</font></td>
     <td><font size=2>1105</font></td>
     <td><font size=2>300</font></td>
-    <td><font size=2>2</font></td></tr>
+    <td><font size=2>3</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>7150</font></td>
+    <td><font size=2>7810</font></td>
+    <td><font size=2>1065</font></td>
+    <td><font size=2>260</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5970</font></td>
-    <td><font size=2>7210</font></td>
+    <td><font size=2>6845</font></td>
+    <td><font size=2>7470</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>310</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>6340</font></td>
-    <td><font size=2>6860</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6790</font></td>
+    <td><font size=2>7410</font></td>
     <td><font size=2>1705</font></td>
     <td><font size=2>210</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5685</font></td>
-    <td><font size=2>6345</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6145</font></td>
+    <td><font size=2>7320</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
@@ -116,45 +117,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>5375</font></td>
-    <td><font size=2>4990</font></td>
-    <td><font size=2>870</font></td>
-    <td><font size=2>340</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>8555</font></td>
-    <td><font size=2>6435</font></td>
+    <td><font size=2>9330</font></td>
+    <td><font size=2>6740</font></td>
     <td><font size=2>1195</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>3</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6430</font></td>
-    <td><font size=2>5985</font></td>
+    <td><font size=2>6980</font></td>
+    <td><font size=2>6435</font></td>
     <td><font size=2>855</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6335</font></td>
-    <td><font size=2>6640</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>280</font></td>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>5680</font></td>
+    <td><font size=2>5765</font></td>
+    <td><font size=2>870</font></td>
+    <td><font size=2>305</font></td>
     <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6430</font></td>
-    <td><font size=2>7065</font></td>
+    <td><font size=2>6985</font></td>
+    <td><font size=2>7310</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
+    <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>6580</font></td>
+    <td><font size=2>7195</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>245</font></td>
     <td><font size=2>1</font></td></tr>
 </table>
 </table>
